testsuite/tests/semantic_errors/call_function_as_procedure/test.adb
procedure Test is
   function Foo (X : Integer) return Integer is (X);
begin
   Foo (2);
   pragma Test_Statement (Expect_Fail => True);
end Test;
